# pyo3-array

./: .copier-answers.yml  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  noxfile.py  pixi.toml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
src/: _constants.rs  _statistical_functions.rs  lib.rs
src/pyo3_array/: __init__.py  _constants.py  xp.pyi
tests/: test_compiled.py  test_package.py
