[package]
name = "pyo3_array"
version = "0.1.0"
edition = "2018"

[lib]
name = "xp"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.3"
numpy = "*"

[dependencies.pyo3]
version = "0.20.0"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module", "abi3-py38"]
